@@ -1,3 +1,7 @@
+2012-04-20  Peter Faulkner <pjwf@hep.ph.bham.ac.uk>
+        * Tag as TrigT1CaloMonitoring-00-11-07
+        * JobOptions update.
+
 2012-04-18  Peter Faulkner <pjwf@hep.ph.bham.ac.uk>
         * Tag as TrigT1CaloMonitoring-00-11-06
         * Change eta/phi plots in EmEfficienciesMonTool to use
